# models/user.go
@@ -6,12 +6,13 @@ import (
 
 type User struct {
 	ID        uuid.UUID  `gorm:"type:uuid;primaryKey" json:"id"`
-	FirstName string     `json:"first_name,omitempty"` // JSON çıktısında gösterilir
-	LastName  string     `json:"last_name,omitempty"`  // JSON çıktısında gösterilir
+	FirstName string     `json:"first_name,omitempty"`
+	LastName  string     `json:"last_name,omitempty"`
 	Username  string     `json:"username"`
-	Email     string     `json:"-"` // JSON çıktısında gizlenir
-	Password  string     `json:"-"` // JSON çıktısında gizlenir
+	Email     string     `json:"email"`
+	Password  string     `json:"-"`
 	Posts     []Post     `gorm:"foreignKey:AuthorID" json:"-"`
 	Comments  []Comment  `gorm:"foreignKey:AuthorID" json:"-"`
 	Reactions []Reaction `gorm:"foreignKey:UserID" json:"-"`
+	Roles     []Role     `gorm:"many2many:user_roles;" json:"-"`
 }
