# responses/role_responses.go
@@ -1,0 +1,7 @@
+package responses
+
+type RoleResponse struct {
+	ID          uint   `json:"id"`
+	Name        string `json:"name"`
+	Description string `json:"description"`
+}
